--- a/src/css/tooltip.css
+++ b/src/css/tooltip.css
@@ -32,7 +32,6 @@
   justify-content: center;
   align-items: center;
   box-shadow: 0 4px 8px #a1a1a1bb;
-  z-index: 1;
 }
 
 .facebook--open {
